<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:id="@+id/full_name_edttxt"
        android:inputType="textPersonName"
        android:hint="@string/user_full_name_hint"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:id="@+id/emailid_edttxt"
        android:inputType="textEmailAddress"
        android:hint="@string/user_emailid_hint"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:id="@+id/password_edttxt"
        android:inputType="textPassword"
        android:hint="@string/user_password_hint"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/repassword_edttxt"
        android:hint="@string/user_repassword_hint"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/submit_btn"
        android:text="@string/submit_btn"/>

</LinearLayout>